--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,3 +22,13 @@ jobs:
         REMOTE_USER: ${{secrets.REMOTE_USER}}
         TARGET: ${{secrets.TARGET_DIR}}
         EXCLUDE: "/dist/, /node_modules/, **.env, rebuild_app.sh, watcher.sh"
+        
+    - name: Join in dir
+      run: cd ${{secrets.TARGET_DIR}}
+    
+    - name: Run yarn
+      run: yarn
+      
+    - name: Run yarn dev
+      run: yarn dev
+    
