--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,10 +27,10 @@ jobs:
       run: yarn
       
     - name: PM2 stop
-      run: pm2 stop 0
+      run: pm2 stop all
     
     - name: PM2 Delete
-      run: pm2 delete 0
+      run: pm2 delete all
     
     - name: Start API
       run: pm2 start ./src/server.js
