--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,7 +24,7 @@ jobs:
         EXCLUDE: "/dist/, /node_modules/, **.env, rebuild_app.sh, watcher.sh"
         
     - name: create pem
-      run: echo ${{secrets.EC2_SSH_KEY}} > key.pem
+      run: echo "${{secrets.EC2_SSH_KEY}}" > key.pem
       
     - name: Run yarn
       run: ssh -i key.pem ${{secrets.REMOTE_USER}}@${{secrets.REMOTE_HOST}}
