--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,6 +26,9 @@ jobs:
     - name: create pem
       run: echo "${{secrets.EC2_SSH_KEY}}" > key.pem
       
+    - name: chmod
+      run: sudo chmod 400 key.pem
+      
     - name: Run yarn
       run: ssh -i key.pem ${{secrets.REMOTE_USER}}@${{secrets.REMOTE_HOST}}
     
