--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Push-to-EC2
+name: Deploy to EC2
 on:
   push:
     branches:
@@ -23,11 +23,14 @@ jobs:
         TARGET: ${{secrets.TARGET_DIR}}
         EXCLUDE: "/dist/, /node_modules/, **.env, rebuild_app.sh, watcher.sh"
         
-    - name: create pem
+    - name: Create PEM file
       run: echo "${{secrets.EC2_SSH_KEY}}" > key.pem
-      
-    - name: chmod
+    
+    - name: Chmod created PEM file
       run: sudo chmod 400 key.pem
-      
+    
+    - name: Copy files with SSH
+      run: scp -i ~/.ssh/id_rsa.pub ${{GITHUB_WORKSPACE}} ${{secrets.REMOTE_USER}}@${{secrets.REMOTE_HOST}}:/home/${{secrets.REMOTE_USER}}/
+        
     - name: Run API
       run: ssh -i key.pem ${{secrets.REMOTE_USER}}@${{secrets.REMOTE_HOST}} "yarn; pm2 stop all; pm2 delete all; pm2 start src/server.js"
