--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,10 +12,10 @@ jobs:
     - name: Checkout the files
       uses: actions/checkout@v3
         
-    - name: Create PEM file
+    - name: Create key.pem file
       run: echo "${{secrets.EC2_SSH_KEY}}" > key.pem
     
-    - name: Chmod created PEM file
+    - name: Chmod created key.pem file
       run: sudo chmod 400 key.pem
     
     - name: Copy files with SSH
