--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,3 +26,10 @@ jobs:
         
     - name: Run API
       run: ssh -i key.pem -o StrictHostKeyChecking=no ${{secrets.REMOTE_USER}}@${{secrets.REMOTE_HOST}} "cp .env bancoImobiliarioBack/; cd bancoImobiliarioBack; yarn; sudo systemctl restart lopoly"
+    
+    - name: Discord notification
+      env:
+        DISCORD_WEBHOOK: ${{secrets.DISCORD_WEBHOOK}}
+      uses: Ilshidur/action-discord@master
+      with:
+        args: 'The project has been deployed.'
