--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,7 +25,7 @@ jobs:
       run: scp -i key.pem -o StrictHostKeyChecking=no -r $GITHUB_WORKSPACE ${{secrets.REMOTE_USER}}@${{secrets.REMOTE_HOST}}:/home/${{secrets.REMOTE_USER}}
         
     - name: Run API
-      run: ssh -i key.pem -o StrictHostKeyChecking=no ${{secrets.REMOTE_USER}}@${{secrets.REMOTE_HOST}} "cp .env bancoImobiliarioBack/; cd bancoImobiliarioBack; yarn; sudo systemctl restart lopoly"
+      run: ssh -i key.pem -o StrictHostKeyChecking=no ${{secrets.REMOTE_USER}}@${{secrets.REMOTE_HOST}} "cp .env bancoImobiliarioBack/; cd bancoImobiliarioBack; docker-compose up"
     
     - name: Discord notification
       env:
