--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ version: "3"
 services:
   app:
     build: .
-    command: npm start
+    command: sh -c "npm install && npm start"
     ports:
       - "3333:3333"
     volumes:
