--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,7 +19,7 @@ jobs:
       run: sudo chmod 400 key.pem
 
     - name: Stop and Delete Container 
-      run: sudo docker stop bancoimobiliarioback-app-1
+      run: ssh -i key.pem -o StrictHostKeyChecking=no ${{secrets.REMOTE_USER}}@${{secrets.REMOTE_HOST}} "sudo docker stop $(docker ps -a -q --filter ancestor=<image-name> --format="{{.ID}}") || true && sudo docker rm $(docker ps -a -q --filter ancestor=<image-name> --format="{{.ID}}") || true"
     
     - name: Delete old files with SSH
       run: ssh -i key.pem -o StrictHostKeyChecking=no ${{secrets.REMOTE_USER}}@${{secrets.REMOTE_HOST}} "rm -rf bancoImobiliarioBack"
